--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -26,7 +26,7 @@
 </div>
 
 <!-- SocketIO -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
+<script src="javascripts/socket.io.js"></script>
 
 <!-- Bootstrap core JavaScript-->
 <script src="vendor/jquery/jquery.min.js"></script>
@@ -34,7 +34,7 @@
 
 <!-- Core plugin JavaScript-->
 <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.1/xlsx.full.min.js"></script>
+<script src="javascripts/xlsx.full.min.js"></script>
 
 <!-- Custom scripts for all pages-->
 <script src="javascripts/sb-admin-2.min.js"></script>
@@ -44,7 +44,7 @@
 <script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
 <!-- Icon-->
-<script src="https://kit.fontawesome.com/91d5bebb50.js" crossorigin="anonymous"></script>
+<script src="javascripts/91d5bebb50.js" crossorigin="anonymous"></script>
 
 <!-- SWAL-->
 <script src="/javascripts/sweetalert.min.js"></script>
@@ -55,22 +55,22 @@
 <!-- DATE RANGE PICKER -->
 <script
   type="text/javascript"
-  src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"
+  src="javascripts/moment.min.js"
 ></script>
 <script
   type="text/javascript"
-  src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"
+  src="javascripts/daterangepicker.min.js"
 ></script>
 <link
   rel="stylesheet"
   type="text/css"
-  href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"
+  href="stylesheets/css/daterangepicker.css"
 />
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+<script src="javascripts/toastr.min.js"></script>
 
 <!--CHART-->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="javascripts/chart.js"></script>
 
 <script>
   //#region Toastr
