--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -192,7 +192,25 @@
             <div class="col-md-6">
               <h6 class="mt-2 font-weight-bold table-title">Sales Details Data:</h6>
             </div>
-            <div class="col-md-6">
+            <div class="col-xl-1 mb-1">
+              <button class="btn btn-outline-inventory w-100 text-center" id="convertopdf">
+                <i class="fas fa-file-pdf fa-sm" id="convertpdfIcon"></i>
+                <span class="web-hidden">Download to PDF</span>
+                <span
+                  id="convertpdfLoading"
+                  class="spinner-border spinner-border-sm d-none"
+                  role="status"
+                  aria-hidden="true"
+                ></span>
+              </button>
+            </div>
+            <div class="col-xl-1 mb-1">
+              <button class="btn btn-outline-inventory w-100 text-center" id="convertoexcel">
+                <i class="fas fa-file-excel fa-sm"></i>
+                <span class="web-hidden">Download to Excel</span>
+              </button>
+            </div>
+            <div class="col-md-4">
               <div class="input-group">
                 <input
                   autocomplete="off"
