--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -10,7 +10,7 @@
 
     const currentDate = getCurrentDate()
     const tomorrowDate = getTomorrowDate()
-    let defaultnumber = 5000
+    let defaultnumber = 25
     LoadTable(defaultnumber)
 
     $('.progress').hide()
@@ -54,7 +54,7 @@
       const $btnIcon = $(this).find('#btn-label-modal')
       const $btnSpinner = $(this).find('#btnSpinner-modal')
       $btnIcon.addClass('d-none')
-      $btnSpinner.removeClass('d-none')
+
       let message = ''
 
       if (statusUpdate == '') {
@@ -353,6 +353,7 @@
         dataType: 'json',
         data: {
           dateRange: `${currentDate} to ${tomorrowDate}`,
+          paymenttype: '-',
         },
         xhrFields: {
           onprogress: function (e) {
@@ -428,7 +429,93 @@
     $('#search-input').on('input', filterTableRows)
 
     $(document).on('click', '#search-button', function () {
-      LoadData();
+      LoadData()
+    })
+
+    $(document).on('click', '#convertopdf', function () {
+      const shiftValue = $('#shift').val()
+      const dateRangeValue = $('#dateRange').val()
+      const posidValue = $('#posid').val()
+      const paymenttypeValue = $('#paymenttype').val()
+
+      var $btnSpinner = $(this).find('#convertpdfLoading')
+      var $btnIcon = $(this).find('#convertpdfIcon')
+      $btnSpinner.removeClass('d-none')
+      $btnIcon.removeClass('fa-file-pdf')
+
+      if (shiftValue == '' && dateRangeValue == '' && posidValue == '' && paymenttypeValue == '-') {
+        warning('Required', 'No parameters selected')
+        $btnSpinner.addClass('d-none')
+        $btnIcon.addClass('fa-file-pdf')
+      } else {
+        $.ajax({
+          url: '/salesdetails/load',
+          method: 'POST',
+          dataType: 'json',
+          data: {
+            shift: shiftValue,
+            dateRange: dateRangeValue,
+            posid: posidValue,
+            paymenttype: paymenttypeValue,
+          },
+          xhrFields: {
+            onprogress: function (e) {
+              if (e.lengthComputable) {
+                const percentComplete = (e.loaded / e.total) * 100
+                $('.progress-bar').css('width', percentComplete + '%')
+              }
+            },
+          },
+          success: function (data) {
+            setTimeout(function () {
+              $('.progress').slideUp(function () {
+                if (data.msg === 'success') {
+                  let salesdetaildata = data.data
+                  let template = 'SALES DETAILS'
+
+                  const pdfData = {
+                    processeddata: salesdetaildata,
+                    template: template,
+                    category: '',
+                    date: dateRangeValue == '' ? '' : dateRangeValue,
+                    branch: '',
+                    employee: '',
+                    transactions: '',
+                    categorysales: '',
+                  }
+
+                  if (salesdetaildata.length != 0) {
+                    Upsert('POST', '/pdf/processpdfdata', pdfData, (result) => {
+                      console.log(result)
+                      if (result.msg == 'success') {
+                        window.open(`/pdf/generatepdf`, '_blank')
+                        success('Success', 'PDF generate successfully!')
+                        $btnSpinner.addClass('d-none')
+                        $btnIcon.addClass('fa-file-pdf')
+                      }
+                    })
+                  }
+                } else {
+                  console.error(data.msg)
+                }
+              })
+            }, 1000)
+          },
+          error: function (error) {
+            console.error(error)
+          },
+        })
+      }
+    })
+
+    $('#convertoexcel').on('click', function () {
+      const table = document.getElementById('salesdetail-dataTable')
+      const ws = XLSX.utils.table_to_sheet(table)
+
+      const wb = XLSX.utils.book_new()
+      XLSX.utils.book_append_sheet(wb, ws, 'salesdetails')
+
+      XLSX.writeFile(wb, `${currentDate}-${tomorrowDate}_sales_details.xlsx`)
     })
 
     function AddStatusOption() {
@@ -483,7 +570,6 @@
                 $('#dateRange').val('')
                 $('#posid').val('')
                 $('#paymenttype').val('-')
-                
 
                 populateTable(data.data.reverse(), itemsPerPage)
               } else {
