Revise Production report submission

--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -104,6 +104,7 @@
             class="spinner-border spinner-border-sm d-none"
             role="status"
             aria-hidden="true"
+            aria-disabled="true"
           ></span>
         </button>
       </div>
